test_files/fails/c_two_invalid_clocks_from_pattern_match.ar
let rec foo = \x ->
    let a =
        (match (x, delay (adv (wait minute))) with
        | (x, d) -> d) in
    let b =
        (match (x, delay (adv (wait second))) with
        | (x, d0) -> d0) in
    x :: delay (foo (
        let y = adv b in
        adv a));

console <- foo ();
